login panel changes

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,8 @@
 </head>
 <body>
   <script type="text/javascript" src="assets/js/moment.js"></script>
-  <app-root></app-root>
+  <div class="admp-app">
+    <app-root></app-root>
+  </div>
 </body>
 </html>
